All routes are specified but not all working
