# server/src/main/scala/io/swagger/server/model/Carte.scala
@@ -1,0 +1,14 @@
+package io.swagger.server.model
+
+
+/**
+ * @param taille 
+ * @param monstres 
+ * @param joueurs 
+ */
+case class Carte (
+  taille: Int,
+  monstres: Int,
+  joueurs: Int
+)
+
