# server/src/main/scala/io/swagger/server/model/Joueurs.scala
@@ -1,0 +1,10 @@
+package io.swagger.server.model
+
+
+/**
+ * @param joueurs 
+ */
+case class Joueurs (
+  joueurs: List[String]
+)
+
